--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <header class="top">
   <img src="assets/logo.png" class="logo" alt="Fuxico em Inglês">
  <nav class="menu">
-  <a href="#blog">Blog</a>
-  <a href="#Sobre">Sobre</a>
-  <a href="#reuniões">Reuniões</a>
+  <a href="blog.html">Blog</a>
+  <a href="#sobre">Sobre</a>
+  <a href="#formatos">Formatos</a>
   <a href="#contato">Contato</a>
 </nav>
 </header>
@@ -38,6 +38,7 @@
     <img src="imagens/4.jpg">
     <img src="imagens/5.jpg">
     <img src="imagens/6.jpg">
+  </div>
 </div>
 
 <section id="sobre" class="section">
