--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 
 <header class="top">
   <img src="assets/logo.png" class="logo" alt="Fuxico em Inglês">
- <nav class="menu">
+<nav class="menu">
+  <a href="index.html">Início</a>
   <a href="blog.html">Blog</a>
-  <a href="#sobre">Sobre</a>
-  <a href="#formatos">Formatos</a>
-  <a href="#contato">Contato</a>
+  <a href="sobre.html">Sobre</a>
+  <a href="formatos.html">Formatos</a>
+  <a href="contato.html">Contato</a>
 </nav>
+
 </header>
 
 <section class="hero">
@@ -79,3 +81,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
